--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,4 +1,49 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.php [QSA,L]
+AddType application/x-httpd-php80 .php
+AddDefaultCharset UTF-8
+Options +FollowSymlinks
+Options -Indexes
+Options -MultiViews
+ServerSignature Off
+
+php_value session.cookie_httponly 1
+php_value session.cookie_lifetime 0
+php_value session.cookie_samesite "Strict"
+php_value session.cookie_secure 1
+php_value session.hash_function "sha256"
+php_value session.use_cookies 1
+php_value session.use_only_cookies 1
+php_value session.use_strict_mode 1
+php_value session.use_trans_sid 0
+
+<IfModule mod_alias.c>
+    RedirectMatch 403 favicon.ico
+</IfModule>
+
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE image/svg+xml
+    AddOutputFilterByType DEFLATE image/x-icon
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE text/javascript
+    AddOutputFilterByType DEFLATE text/plain
+</IfModule>
+
+<IfModule mod_headers.c>
+    <FilesMatch "\.(css|ico|jpe?g|js|json|png|svg)$">
+        Header set Access-Control-Allow-Origin "*"
+        Header set Expires "Thu, 15 Apr 2024 20:00:00 GMT"
+        Header unset ETag
+        Header unset Pragma
+        FileETag None
+    </FilesMatch>
+</IfModule>
+
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.php [QSA,L]
+</IfModule>
