--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "fluence-prototype/bean": "^1.0",
     "fluence-prototype/collections": "^1.0",
     "fluence-prototype/dispatcher": "^1.0",
+    "fluence-prototype/filter": "^1.0",
     "fluence-prototype/security": "^1.0",
     "fluence-prototype/validation": "^1.0"
   },
