--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   ],
   "require": {
     "php": ">=8.0.0",
+    "fluence-prototype/auth": "^1.0",
     "fluence-prototype/bean": "^1.0",
     "fluence-prototype/collections": "^1.0",
     "fluence-prototype/dispatcher": "^1.0",
